--- a/css/contact/mobile.css
+++ b/css/contact/mobile.css
@@ -354,9 +354,18 @@ fieldset input:focus, fieldset select:focus, fieldset textarea:focus {
   }
 }
 
-input:-webkit-autofill {
+@keyframes autofill {
+  0%, 100% {
+    color: #e9e9e9;
+    background: transparent;
+  }
+}
+
+input:autofill {
   -webkit-animation-name: autofill;
+          animation-name: autofill;
   -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
 }
 
 .center-button {
