--- a/css/contact/mobile.css
+++ b/css/contact/mobile.css
@@ -347,17 +347,17 @@ fieldset input:focus, fieldset select:focus, fieldset textarea:focus {
   background: rgba(239, 199, 41, 0.1);
 }
 
-@-webkit-keyframes autofill {
-  0%, 100% {
+@keyframes autofill {
+  to {
     color: #e9e9e9;
     background: transparent;
   }
 }
 
-@keyframes autofill {
-  0%, 100% {
+@-webkit-keyframes autofill {
+  to {
     color: #e9e9e9;
-    background: transparent;
+    background-color: transparent;
   }
 }
 
@@ -366,6 +366,11 @@ input:autofill {
           animation-name: autofill;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
+}
+
+input:-webkit-autofill {
+  -webkit-animation-name: autofill;
+  -webkit-animation-fill-mode: both;
 }
 
 .center-button {
