--- a/css/contact/desktop.css
+++ b/css/contact/desktop.css
@@ -73,21 +73,113 @@
   header .menu-container .nav ul li a .active {
     font-size: 19px;
   }
+  #contact-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
   fieldset {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 50vw;
-    margin: 5vh 0 0 25vw;
+    min-width: 500px;
+    max-width: 800px;
+    margin: 0;
   }
   fieldset .input-field, fieldset .dropdown-field, fieldset .message-field {
-    width: 40vw;
+    width: 90%;
+    margin: 4vh 0 0 10%;
   }
   fieldset input, fieldset .select-container {
-    width: 40vw;
+    width: 90%;
   }
   fieldset input img, fieldset .select-container img {
     right: 30vw;
   }
+  fieldset .select-container {
+    border: none;
+  }
+  fieldset .select-container select {
+    display: none;
+  }
+  fieldset .select-container img {
+    display: none;
+  }
   fieldset textarea {
-    width: 40vw;
+    width: 90%;
+  }
+  fieldset .select-hide {
+    display: none;
+  }
+  fieldset .select-items div:hover, fieldset .same-as-selected {
+    background: rgba(239, 199, 41, 0.1);
+  }
+  fieldset .select-selected:after {
+    position: absolute;
+    content: "";
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #fff transparent transparent transparent;
+  }
+  fieldset .select-selected.select-arrow-active:after {
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
+  }
+  fieldset .select-selected {
+    background-color: #161616;
+  }
+  fieldset .select-items div, fieldset .select-selected {
+    color: #e9e9e9;
+    padding: 8px 16px;
+    border: 2px solid #e9e9e9;
+    border-radius: 5px;
+    width: 100%;
+    cursor: pointer;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+  }
+  fieldset .select-items {
+    position: absolute;
+    background-color: #161616;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 99;
+  }
+  fieldset .select-hide {
+    display: none;
+  }
+  fieldset .select-items div:hover, fieldset .same-as-selected {
+    background: rgba(239, 199, 41, 0.1);
+  }
+  fieldset textarea {
+    margin-bottom: 4vh;
   }
 }
 /*# sourceMappingURL=desktop.css.map */
