--- a/css/contact/desktop.scss
+++ b/css/contact/desktop.scss
@@ -61,21 +61,100 @@ $hover-background: rgb(95, 95, 95);
             }
         }
     }
+    #contact-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
     fieldset{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         width: 50vw;
-        margin: 5vh 0 0 25vw;
+        min-width: 500px;
+        max-width: 800px;
+        margin:0;
         .input-field, .dropdown-field, .message-field{
-            width: 40vw;
+            width: 90%;
+            margin: 4vh 0 0 10%;
         }
         input, .select-container{
-            width: 40vw;
+            width: 90%;
             img{
                 right: 30vw;
             }
         }
+        .select-container{
+            border:none;
+            select{
+                display:none;
+            }
+            img{
+                display:none;
+            }
+        }
         textarea{
-            width: 40vw;
+            width: 90%;
+        }
+   
+        .select-hide{
+            display: none;
+        }
+    
+        .select-items div:hover, .same-as-selected{
+            background: rgba(239, 199, 41, 0.1);
         }
 
+        .select-selected:after{
+            position: absolute;
+            content: "";
+            top: 14px;
+            right: 10px;
+            width: 0;
+            height: 0;
+            border: 6px solid transparent;
+            border-color: #fff transparent transparent transparent;
+        }
+    
+        .select-selected.select-arrow-active:after{
+            border-color: transparent transparent #fff transparent;
+            top: 7px;
+        }
+    
+        .select-selected{
+            background-color: $background-color;
+        }
+        .select-items div, .select-selected{
+            color: $font-color;
+            padding: 8px 16px;
+            border: 2px solid $font-color;
+            border-radius: 5px;
+            width: 100%;
+            //border-color: transparent transparent rgba(0,0,0,0.1) transparent;
+            cursor: pointer;
+            user-select: none;
+        }
+    
+        .select-items{
+            position: absolute;
+            background-color: $background-color;
+            top: 100%;
+            left: 0;
+            right: 0;
+            z-index: 99;
+        }
+    
+        .select-hide{
+            display: none;
+        }
+    
+        .select-items div:hover, .same-as-selected{
+            background: rgba(239, 199, 41, 0.1);
+        }
+        textarea{
+            margin-bottom: 4vh;
+        }
     }
 }
