--- a/css/contact/mobile.css
+++ b/css/contact/mobile.css
@@ -241,7 +241,7 @@ fieldset .select-container {
           align-items: center;
   padding: 0 0 0 0;
   position: relative;
-  border: none;
+  border: 2px solid #e9e9e9;
 }
 
 fieldset .select-container select {
@@ -257,57 +257,11 @@ fieldset .select-container select {
      -moz-appearance: none;
           appearance: none;
   font-size: 20px;
-  display: none;
 }
 
-fieldset .select-selected {
-  background-color: #161616;
-}
-
-fieldset .select-selected:after {
+fieldset .select-container img {
   position: absolute;
-  content: "";
-  top: 14px;
-  right: 10px;
-  width: 0;
-  height: 0;
-  border: 6px solid transparent;
-  border-color: #fff transparent transparent transparent;
-}
-
-fieldset .select-selected.select-arrow-active:after {
-  border-color: transparent transparent #fff transparent;
-  top: 7px;
-}
-
-fieldset .select-items div, fieldset .select-selected {
-  color: #e9e9e9;
-  padding: 8px 16px;
-  border: 2px solid #e9e9e9;
-  border-radius: 5px;
-  width: 100%;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-fieldset .select-items {
-  position: absolute;
-  background-color: #161616;
-  top: 100%;
-  left: 0;
-  right: 0;
-  z-index: 99;
-}
-
-fieldset .select-hide {
-  display: none;
-}
-
-fieldset .select-items div:hover, fieldset .same-as-selected {
-  background: rgba(239, 199, 41, 0.1);
+  right: 5px;
 }
 
 fieldset textarea {
@@ -325,6 +279,10 @@ fieldset textarea {
 
 fieldset .message-field {
   margin-bottom: 5vh;
+}
+
+fieldset select::invalid {
+  color: grey;
 }
 
 fieldset ::-webkit-input-placeholder {
@@ -371,6 +329,8 @@ input:autofill {
 input:-webkit-autofill {
   -webkit-animation-name: autofill;
   -webkit-animation-fill-mode: both;
+  animation-name: autofill;
+  animation-fill-mode: both;
 }
 
 .center-button {
