--- a/css/contact/mobile.scss
+++ b/css/contact/mobile.scss
@@ -95,6 +95,7 @@ header {
             transform: translateX(100%);
             transition: transform 0.5s ease-in;
             ul{
+                //margin-bottom: 20vh;
                 li{
                     opacity: 0;
                     a:hover{
@@ -179,7 +180,7 @@ fieldset{
         align-items: center;
         padding: 0 0 0 0;
         position: relative;
-        border: none;
+        border: 2px solid $font-color;
         select{
             width: 100vw;
             min-height: 30px;
@@ -191,55 +192,14 @@ fieldset{
             position: relative;
             appearance: none;
             font-size: $font-size;
-            display: none;
+        }
+        img{
+            position: absolute;
+            right: 5px;
         }
     }
-    .select-selected{
-        background-color: $background-color;
-    }
-    .select-selected:after{
-        position: absolute;
-        content: "";
-        top: 14px;
-        right: 10px;
-        width: 0;
-        height: 0;
-        border: 6px solid transparent;
-        border-color: #fff transparent transparent transparent;
-    }
 
-    .select-selected.select-arrow-active:after{
-        border-color: transparent transparent #fff transparent;
-        top: 7px;
-    }
 
-    .select-items div, .select-selected{
-        color: $font-color;
-        padding: 8px 16px;
-        border: 2px solid $font-color;
-        border-radius: 5px;
-        width: 100%;
-        //border-color: transparent transparent rgba(0,0,0,0.1) transparent;
-        cursor: pointer;
-        user-select: none;
-    }
-
-    .select-items{
-        position: absolute;
-        background-color: $background-color;
-        top: 100%;
-        left: 0;
-        right: 0;
-        z-index: 99;
-    }
-
-    .select-hide{
-        display: none;
-    }
-
-    .select-items div:hover, .same-as-selected{
-        background: rgba(239, 199, 41, 0.1);
-    }
 
     textarea{
         width: 80vw;
@@ -256,7 +216,9 @@ fieldset{
     .message-field{
         margin-bottom: 5vh;
     }
-
+    select::invalid{
+        color: grey;
+    }
     ::placeholder{
         color: grey;
     }
@@ -285,6 +247,8 @@ input:autofill{
 input:-webkit-autofill{
     -webkit-animation-name: autofill;
     -webkit-animation-fill-mode: both;
+    animation-name: autofill;
+    animation-fill-mode: both;
 }
 
 
