--- a/css/home/desktop.css
+++ b/css/home/desktop.css
@@ -1,19 +1,81 @@
 @media (min-width: 475px) and (min-height: 500px) {
   header .logo-container {
-    padding-top: 5vh;
-    margin-bottom: 5vh;
+    width: 30vw;
   }
-  header .logo-container .logo img {
-    width: 75vw;
-    max-width: 500px;
+  header .logo-container img {
+    width: 80%;
+    padding: 0;
+    padding-top: 20px;
+    padding-left: 10%;
   }
-  header .head-container {
+  header .burger {
     display: none;
   }
-  header .line-desktop {
+  header .menu-container nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+  header .menu-container .nav {
+    position: relative;
+    width: 70vw;
+    height: 5vh;
+    top: 0;
+    margin-bottom: 10vh;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+    -webkit-transition-property: none;
+    transition-property: none;
+  }
+  header .menu-container ul {
+    width: 70vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+  header .menu-container ul li {
+    text-align: center;
+    opacity: 1;
+    padding: 0;
+    width: 25vw;
+    min-width: 50px;
+  }
+  header .menu-container ul li a:hover {
+    font-size: 18px;
+  }
+  header .menu-container ul li a {
+    font-size: 17px;
+    letter-spacing: 4px;
+  }
+  header .menu-container ul li a .active {
+    font-size: 19px;
+  }
+  .line-desktop {
     border-top: 1px solid #ef9629;
   }
-  header .menu-container {
+  .desktop-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -28,71 +90,14 @@
         -ms-flex-align: center;
             align-items: center;
   }
-  header .menu-container .nav {
-    position: relative;
-    width: 100vw;
-    height: 5vh;
-    top: 0;
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
-    -webkit-transition-property: none;
-    transition-property: none;
-  }
-  header .menu-container .nav ul {
-    width: 75vw;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    text-align: center;
-  }
-  header .menu-container .nav ul li {
-    display: in-line;
-    text-align: center;
-    opacity: 1;
-    padding: 0;
-    width: 25vw;
-    min-width: 50px;
-  }
-  header .menu-container .nav ul li a:hover {
-    font-size: 18px;
-  }
-  header .menu-container .nav ul li a {
-    font-size: 17px;
-    letter-spacing: 4px;
-  }
-  header .menu-container .nav ul li a .active {
-    font-size: 19px;
-  }
-  .desktop-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
-  }
   .desktop-container .carousel-container {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    padding: 0 2vw 0 4vw;
   }
   .desktop-container .carousel-container .slideshow-container {
-    width: 60vw;
+    width: 90vw;
+    height: 70vh;
     margin-top: 5vw;
   }
   .desktop-container .carousel-container .slideshow-container .next, .desktop-container .carousel-container .slideshow-container .prev {
