--- a/css/home/landscape.css
+++ b/css/home/landscape.css
@@ -1,23 +1,12 @@
 @media (orientation: landscape) and (max-height: 450px) {
   header .logo-container .logo img {
-    height: 30vh;
-    width: auto;
+    width: 50%;
+    margin-left: 25%;
     padding-top: 5vh;
-  }
-  header .head-container {
-    height: 15vh;
-  }
-  header .head-container #hamburger-menu {
-    height: 8vh;
-  }
-  header .head-container #hamburger-menu img {
-    height: 10vh;
-    max-height: 32px;
-    min-height: 30px;
-    padding-top: 2vh;
   }
   header .menu-container .nav {
     width: 100vw;
+    top: 35px;
   }
   .slideshow-container {
     width: 100vw;
