--- a/css/home/mobile.css
+++ b/css/home/mobile.css
@@ -13,88 +13,58 @@ body {
 }
 
 header {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   width: 100%;
   background-color: #161616;
 }
 
-header .logo-container {
+header .burger-logo-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-top: 11vh;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+header .logo-container {
+  display: block;
   margin-bottom: 15px;
 }
 
-header .logo-container .logo img {
-  width: 90vw;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+header .logo-container img {
+  width: 80%;
+  margin-left: 10%;
+  padding: 20px 10vw 0 10vw;
 }
 
-header .head-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+header .burger div {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  margin: 5px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+header .burger {
+  padding: 10px;
   position: fixed;
-  z-index: 98;
-  width: 100vw;
-  height: 10vh;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: right;
-      -ms-flex-align: right;
-          align-items: right;
-  background-color: #161616;
-  opacity: 0.95;
-}
-
-header .head-container #hamburger-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0;
-  padding: 0;
-  background-color: #161616;
-  -ms-flex-item-align: center;
-      align-self: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  height: 10vh;
-}
-
-header .head-container #hamburger-menu img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-item-align: center;
-      align-self: center;
-  width: auto;
   z-index: 99;
-  height: 8vh;
-  min-height: 36px;
-  max-height: 40px;
-  padding-right: 5vw;
-  padding-top: 1vh;
-  padding-bottom: 1vh;
-  opacity: 1;
 }
 
 header .menu-container {
@@ -117,14 +87,17 @@ header .menu-container .nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 90vh;
+  height: 95vh;
   width: 75vw;
-  top: 10vh;
+  top: 5vh;
+  right: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: #161616;
   opacity: 0.95;
   -webkit-transform: translateX(100%);
@@ -135,25 +108,25 @@ header .menu-container .nav {
   transition: transform 0.5s ease-in, -webkit-transform 0.5s ease-in;
 }
 
-header .menu-container .nav ul li {
+header .menu-container ul li {
   opacity: 0;
   list-style: none;
   padding: 10vh 0 10vh 0;
 }
 
-header .menu-container .nav ul li a:hover {
+header .menu-container ul li a:hover {
   font-size: 15px;
   font-weight: bold;
 }
 
-header .menu-container .nav ul a {
+header .menu-container ul a {
   color: #e9e9e9;
   text-decoration: none;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   font-size: 14px;
 }
 
-header .menu-container .nav ul a .active {
+header .menu-container ul a .active {
   font-size: 16px;
   font-weight: bold;
   text-decoration: underline;
@@ -190,6 +163,20 @@ header .menu-container .nav-active {
     -webkit-transform: translateX(0);
             transform: translateX(0);
   }
+}
+
+header .toggle .line1 {
+  -webkit-transform: rotate(-45deg) translate(-5px, 6px);
+          transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+header .toggle .line2 {
+  opacity: 0;
+}
+
+header .toggle .line3 {
+  -webkit-transform: rotate(45deg) translate(-5px, -6px);
+          transform: rotate(45deg) translate(-5px, -6px);
 }
 
 .carousel-container {
