--- a/css/home/landscape.scss
+++ b/css/home/landscape.scss
@@ -2,11 +2,11 @@
     header{
         .logo-container{
             .logo img{
-                //height: 30vh;
-                //width: auto;
-                width: 50%;
-                margin-left: 25%;
-                padding-top:5vh;
+                width: 40%;
+                //width: 100px;
+                //width: 50%;
+                //margin-left: 25%;
+                //padding-top:5vh;
             }
         }
 
