--- a/css/home/mobile.css
+++ b/css/home/mobile.css
@@ -27,28 +27,14 @@ header {
   background-color: #161616;
 }
 
-header .burger-logo-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-
 header .logo-container {
   display: block;
   margin-bottom: 15px;
 }
 
 header .logo-container img {
-  width: 80%;
-  margin-left: 10%;
-  padding: 20px 10vw 0 10vw;
+  width: 60%;
+  padding: 0.6em;
 }
 
 header .burger div {
@@ -62,9 +48,10 @@ header .burger div {
 }
 
 header .burger {
-  padding: 10px;
+  padding: 1em;
+  padding-right: .5em;
   position: fixed;
-  z-index: 99;
+  z-index: 110;
 }
 
 header .menu-container {
@@ -75,9 +62,19 @@ header .menu-container {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+}
+
+header .menu-container .burger-logo-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 header .menu-container .nav {
@@ -115,7 +112,6 @@ header .menu-container ul li {
 }
 
 header .menu-container ul li a:hover {
-  font-size: 15px;
   font-weight: bold;
 }
 
@@ -123,11 +119,10 @@ header .menu-container ul a {
   color: #e9e9e9;
   text-decoration: none;
   letter-spacing: 2px;
-  font-size: 14px;
+  font-size: 0.8em;
 }
 
 header .menu-container ul a .active {
-  font-size: 16px;
   font-weight: bold;
   text-decoration: underline;
   color: #ef9629;
@@ -217,10 +212,10 @@ header .toggle .line3 {
   position: absolute;
   top: 40%;
   width: auto;
-  padding: 5vw;
+  padding: 0.5em;
   color: white;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 2em;
   -webkit-transition: 0.6s ease;
   transition: 0.6s ease;
   -webkit-user-select: none;
@@ -285,7 +280,6 @@ header .toggle .line3 {
 }
 
 #submit {
-  margin-top: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -296,65 +290,36 @@ header .toggle .line3 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-top: 5vh;
 }
 
 #submit #submit-button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
 
-#submit #submit-button .halfCircleLeft {
-  width: 25px;
-  height: 45px;
-  border: 3px solid #e9e9e9;
-  border-right: none;
-  border-radius: 25px 0 0 25px;
+#submit #submit-button .request-container {
+  width: 160px;
+  height: 40px;
+  border-radius: 30px;
+  border: 2px solid #e9e9e9;
 }
 
-#submit #submit-button .rectangle {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 145px;
-  height: 45px;
-  border-top: 3px solid #e9e9e9;
-  border-bottom: 3px solid #e9e9e9;
-  text-align: center;
-}
-
-#submit #submit-button .rectangle .request-container {
-  padding-top: 2px;
-}
-
-#submit #submit-button .rectangle .request-container a {
+#submit #submit-button .request-container a {
   text-decoration: none;
+  background-color: #161616;
   color: #e9e9e9;
-  font-size: 15px;
+  font-size: 1em;
   text-transform: uppercase;
-  letter-spacing: 3px;
-}
-
-#submit #submit-button .halfCircleRight {
-  width: 25px;
-  height: 45px;
-  border: 3px solid #e9e9e9;
-  border-left: none;
-  border-radius: 0 25px 25px 0;
+  letter-spacing: 2px;
 }
 
 #downward-arrow {
@@ -367,7 +332,7 @@ header .toggle .line3 {
   color: #e9e9e9;
   cursor: pointer;
   font-weight: bold;
-  font-size: 38px;
+  font-size: 3em;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -376,25 +341,78 @@ header .toggle .line3 {
 
 #downward-arrow a:hover {
   color: white;
-  font-size: 40px;
 }
 
-#about-us-container {
+.desktop-container-about {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.desktop-container-about #about-us-container {
   text-align: center;
   color: #e9e9e9;
 }
 
-#about-us-container div {
+.desktop-container-about #about-us-container div {
   font-weight: 3;
   margin-top: 2vh;
   text-decoration: underline;
-  font-size: 19px;
+  font-size: 1em;
 }
 
-#about-us-container p {
+.desktop-container-about #about-us-container p {
   margin-top: 2vh;
   padding: 0 3vw 0 3vw;
-  font-size: 14px;
+  font-size: 0.8em;
+}
+
+.desktop-container-about .icon-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 90vw;
+  margin-top: 5vh;
+}
+
+.desktop-container-about .icon-container .icon-sentence {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.desktop-container-about .icon-container .icon-sentence img {
+  width: 60px;
+}
+
+.desktop-container-about .icon-container .icon-sentence p {
+  color: #e9e9e9;
+  font-size: 0.8em;
+  padding: 5vw;
 }
 
 #line {
