--- a/css/home/mobile.scss
+++ b/css/home/mobile.scss
@@ -3,6 +3,9 @@ $font-color: rgb(233, 233, 233);
 $background-color: rgb(22, 22, 22);
 $logo-color: #ef9629;
 $hover-background: rgb(95, 95, 95);
+$font-size: 0.8em;
+$font-active: 0.7em;
+$font-header: 1em;
 
 *{
     margin: 0;
@@ -26,18 +29,13 @@ header {
     width: 100%;
     background-color: $background-color;
 // Logo styling  
-    .burger-logo-container{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-    }
+
     .logo-container{
         display:block;
         margin-bottom: 15px;
         img{
-            width: 80%;
-            margin-left: 10%;
-            padding: 20px 10vw 0 10vw;
+            width: 60%;
+            padding: 0.6em;
         }
     }
 
@@ -50,17 +48,23 @@ header {
         transition: all 0.3s ease;
     }
     .burger{
-        padding: 10px;
+        padding: 1em;
+        padding-right: .5em;
         position: fixed;
-        z-index: 99;
+        z-index: 110;
     }
 
 // menu styling and animations
     .menu-container{
         display:flex;
         flex-direction:row;
-        justify-content: flex-end;
+        //justify-content: flex-end;
         // menu styling when hamburger button is pressed
+        .burger-logo-container{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+        }
         .nav{
             position: absolute;
             z-index: 100;
@@ -81,7 +85,6 @@ header {
             li{
                 opacity: 0;
                 a:hover{
-                    font-size: 15px;
                     font-weight:bold;
                 }
                 list-style: none;
@@ -91,9 +94,8 @@ header {
                     color: $font-color;
                     text-decoration: none;
                     letter-spacing: 2px;
-                    font-size: 14px;
+                    font-size: $font-size;
                     .active{
-                        font-size: 16px;
                         font-weight: bold;
                         text-decoration: underline;
                         color: $logo-color;
@@ -159,10 +161,10 @@ header {
         position: absolute;
         top: 40%;
         width: auto;
-        padding: 5vw;
+        padding: 0.5em;
         color: white;
         font-weight: bold;
-        font-size: 25px;
+        font-size: 2em;
         transition: 0.6s ease;
         user-select: none;
     }
@@ -207,51 +209,33 @@ header {
 // submit quote
 
 #submit{
-    margin-top: 15px;
-    display:flex;
-    flex-direction:row;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
+    margin-top: 5vh;
     #submit-button{
-        display:flex;
-        flex-direction:row;
+        display: flex;
+        text-align: center;
+        align-items: center;
         justify-content: center;
-        .halfCircleLeft{
-            width: 25px;
-            height: 45px;
-            border: 3px solid $font-color;
-            border-right: none;
-            border-radius: 25px 0 0 25px;
-        }
-        .rectangle{
-            display:flex;
-            flex-direction: column;
-            align-items: center;
-            width: 145px;
-            height: 45px;
-            border-top: 3px solid $font-color;
-            border-bottom: 3px solid $font-color;
-            text-align:center;
-            .request-container{
-                padding-top: 2px;
-                a{
-                    text-decoration: none;
-                    color: $font-color;
-                    font-size: 15px;
-                    text-transform: uppercase;
-                    letter-spacing: 3px;
-                }
+        .request-container{
+            width: 160px;
+            height: 40px;
+            border-radius: 30px;
+            border: 2px solid $font-color;
+            a{
+                text-decoration: none;
+                background-color:$background-color;
+                color: $font-color;
+                font-size: $font-header;
+                text-transform: uppercase;
+                letter-spacing: 2px;
             }
+        }
 
-        }
-        .halfCircleRight{
-            width: 25px;
-            height: 45px;
-            border: 3px solid $font-color;
-            border-left: none;
-            border-radius: 0 25px 25px 0;            
-        }
     }
 }
+
 
 
 #downward-arrow{
@@ -263,28 +247,53 @@ header {
         color: $font-color;
         cursor: pointer;
         font-weight: bold;
-        font-size: 38px;
+        font-size: 3em;
         user-select: none;
     }
     a:hover{
         color: white;
-        font-size: 40px;
     }
 }
 
-#about-us-container{
-    text-align: center;
-    color: $font-color;
-    div{
-        font-weight: 3;
-        margin-top: 2vh;
-        text-decoration: underline;
-        font-size: 19px;
+.desktop-container-about{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    #about-us-container{
+        text-align: center;
+        color: $font-color;
+        div{
+            font-weight: 3;
+            margin-top: 2vh;
+            text-decoration: underline;
+            font-size: $font-header;
+        }
+        p{
+            margin-top: 2vh;
+            padding: 0 3vw 0 3vw;
+            font-size: $font-size;
+        }
     }
-    p{
-        margin-top: 2vh;
-        padding: 0 3vw 0 3vw;
-        font-size: 14px;
+    .icon-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 90vw;
+        margin-top: 5vh;
+        .icon-sentence{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            img{
+                width: 60px;
+            }
+            p{
+                color: $font-color;
+                font-size: $font-size;
+                padding: 5vw;
+            }
+        }
     }
 }
 
