--- a/css/home/mobile.scss
+++ b/css/home/mobile.scss
@@ -27,7 +27,9 @@ header {
     justify-content: flex-end;
     flex-direction: row;
     width: 100%;
-    background-color: $background-color;
+    background-color: transparent;
+    position: absolute;
+    z-index: 150;
 // Logo styling  
 
     .logo-container{
@@ -77,7 +79,7 @@ header {
             align-items:center;
             flex-direction: column;
             background-color: $background-color;
-            opacity: 0.95;
+            opacity: 0.8;
             transform: translateX(100%);
             transition: transform 0.5s ease-in; 
         }
@@ -139,16 +141,18 @@ header {
 }
 
  .slideshow-container{
-    width: 90vw;
+    width: 100vw;
     position: relative;
     overflow: hidden; // crops pictures
-    height: 50vh;
+    height: 100vh;
+    background-color: black;
     img{
         position:absolute;
         height:100%;
         left:50%;
         top:50%;
         transform:translate(-50%, -50%);
+        opacity: 0.8;
     }
  }
 
