--- a/css/home/landscape.scss
+++ b/css/home/landscape.scss
@@ -20,6 +20,9 @@
 
     .slideshow-container{
         width: 100vw;
+        img{
+            width: 100vw;
+        }
         height: 100vh;
     }
 
