--- a/css/home/desktop.css
+++ b/css/home/desktop.css
@@ -2,21 +2,6 @@
   header .burger {
     display: none;
   }
-  header .burger-logo-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
   header .logo-container {
     width: 35vw;
     display: -webkit-box;
@@ -46,9 +31,9 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-align: flex-end | center;
-        -ms-flex-align: flex-end | center;
-            align-items: flex-end | center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -57,6 +42,7 @@
     position: relative;
     width: 65vw;
     height: 5vh;
+    top: 5vh;
     background-color: transparent;
     margin-bottom: 10vh;
     -webkit-box-orient: horizontal;
