--- a/css/home/mobile.css
+++ b/css/home/mobile.css
@@ -8,7 +8,7 @@
 body {
   font: 100% Helvetica, sans-serif;
   overflow-x: hidden;
-  background-color: #161616;
+  background-color: white;
   height: 100%;
 }
 
@@ -86,9 +86,9 @@ header .menu-container .nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 95vh;
+  height: 100vh;
   width: 75vw;
-  top: 5vh;
+  top: 0;
   right: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -248,6 +248,7 @@ header .toggle .line3 {
   width: 12px;
   margin: 0 3px;
   background-color: white;
+  border: 1px solid #161616;
   border-radius: 50%;
   display: inline-block;
   -webkit-transition: background-color 0.6s ease;
@@ -314,13 +315,13 @@ header .toggle .line3 {
   width: 160px;
   height: 40px;
   border-radius: 30px;
-  border: 2px solid #e9e9e9;
+  border: 2px solid #161616;
 }
 
 #submit #submit-button .request-container a {
   text-decoration: none;
-  background-color: #161616;
-  color: #e9e9e9;
+  background-color: white;
+  color: #161616;
   font-size: 1em;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -333,7 +334,7 @@ header .toggle .line3 {
 
 #downward-arrow a {
   text-decoration: none;
-  color: #e9e9e9;
+  color: #161616;
   cursor: pointer;
   font-weight: bold;
   font-size: 3em;
@@ -365,7 +366,7 @@ header .toggle .line3 {
 
 .desktop-container-about #about-us-container {
   text-align: center;
-  color: #e9e9e9;
+  color: #161616;
 }
 
 .desktop-container-about #about-us-container div {
@@ -410,11 +411,13 @@ header .toggle .line3 {
 }
 
 .desktop-container-about .icon-container .icon-sentence img {
+  background-color: #ef9629;
   width: 60px;
+  border-radius: 60px;
 }
 
 .desktop-container-about .icon-container .icon-sentence p {
-  color: #e9e9e9;
+  color: #161616;
   font-size: 0.8em;
   padding: 5vw;
 }
@@ -442,14 +445,14 @@ footer {
 
 footer #contact-info {
   padding: 4vh 0 2vh 0;
-  color: #e9e9e9;
+  color: #161616;
   text-align: center;
   font-size: 15px;
 }
 
 footer #contact-info a {
   text-decoration: none;
-  color: #e9e9e9;
+  color: #161616;
 }
 
 footer #social-media {
@@ -470,9 +473,9 @@ footer #social-media #social-icons a {
 }
 
 footer #social-media #social-icons img {
-  background-color: #e9e9e9;
+  background-color: white;
   border-radius: 50%;
-  border: 2px solid #e9e9e9;
+  border: 2px solid #161616;
   width: auto;
   height: 7vh;
   min-height: 40px;
