--- a/css/home/mobile.scss
+++ b/css/home/mobile.scss
@@ -1,11 +1,13 @@
 $font-stack: Helvetica, sans-serif;
-$font-color: rgb(233, 233, 233);
-$background-color: rgb(22, 22, 22);
+$font-color: rgb(22, 22, 22);
+$background-color: white;
 $logo-color: #ef9629;
 $hover-background: rgb(95, 95, 95);
 $font-size: 0.8em;
 $font-active: 0.7em;
 $font-header: 1em;
+$mobile-color: rgb(22,22,22);
+$mobile-text: rgb(233,233,233);
 
 *{
     margin: 0;
@@ -72,13 +74,13 @@ header {
             z-index: 100;
             position: fixed;
             display:flex;
-            height: 95vh;
+            height:100vh;
             width: 75vw;
-            top: 5vh;
+            top: 0;
             right: 0;
             align-items:center;
             flex-direction: column;
-            background-color: $background-color;
+            background-color: $mobile-color;
             opacity: 0.8;
             transform: translateX(100%);
             transition: transform 0.5s ease-in; 
@@ -93,7 +95,7 @@ header {
                 padding: 10vh 0 10vh 0;
                 }
                 a{
-                    color: $font-color;
+                    color: $mobile-text;
                     text-decoration: none;
                     letter-spacing: 2px;
                     font-size: $font-size;
@@ -101,7 +103,7 @@ header {
                         font-weight: bold;
                         text-decoration: underline;
                         color: $logo-color;
-                        background-color:$background-color;
+                        background-color:rgb(22, 22, 22);
                 }
             }
         }
@@ -148,7 +150,7 @@ header {
     background-color: black;
     img{
         position:absolute;
-        height:100%;
+        height: 100%;
         left:50%;
         top:50%;
         transform:translate(-50%, -50%);
@@ -193,6 +195,7 @@ header {
         width: 12px;
         margin: 0 3px;
         background-color: white;
+        border: 1px solid $font-color;
         border-radius: 50%;
         display: inline-block; // use this to show inside the container
         transition: background-color 0.6s ease;
@@ -290,7 +293,9 @@ header {
             flex-direction: row;
             align-items: center;
             img{
+                background-color: $logo-color;
                 width: 60px;
+                border-radius:60px;
             }
             p{
                 color: $font-color;
@@ -329,7 +334,7 @@ footer{
                 text-decoration: none;
             }
             img{
-                background-color: $font-color;
+                background-color: $background-color;
                 border-radius:50%;
                 border: 2px solid $font-color;
                 width: auto;
