--- a/css/home/mobile.css
+++ b/css/home/mobile.css
@@ -473,7 +473,7 @@ footer #social-media #social-icons a {
 }
 
 footer #social-media #social-icons img {
-  background-color: white;
+  background-color: #ef9629;
   border-radius: 50%;
   border: 2px solid #161616;
   width: auto;
