--- a/css/home/desktop.css
+++ b/css/home/desktop.css
@@ -81,10 +81,13 @@
   header .menu-container ul li a {
     font-size: 0.8em;
     letter-spacing: 4px;
+    font-weight: bold;
   }
   header .menu-container ul li a .active {
-    font-size: 0.9em;
+    font-weight: bold;
     background-color: transparent;
+    color: #e9e9e9;
+    border: 2px solid #ef9629;
   }
   .line-desktop {
     border-top: 1px solid #ef9629;
@@ -143,11 +146,9 @@
   }
   .desktop-container .desktop-container-about #about-us-container div {
     font-weight: 10;
-    font-size: 1em;
     letter-spacing: 4px;
   }
   .desktop-container .desktop-container-about #about-us-container p {
-    font-size: 0.8em;
     letter-spacing: 2px;
     line-height: 2;
   }
