--- a/css/home/mobile.scss
+++ b/css/home/mobile.scss
@@ -334,7 +334,7 @@ footer{
                 text-decoration: none;
             }
             img{
-                background-color: $background-color;
+                background-color: $logo-color;
                 border-radius:50%;
                 border: 2px solid $font-color;
                 width: auto;
